# HyperKKl

./: .gitignore  IMPLEMENTATION.md  README.md  THEORY.md  pyproject.toml
baselines/: duffing.py  generate_dataset.py  test.py  train.py
baselines/config/: duff.yaml  exo_input.yaml  lorenz.yaml
baselines/config/systems/: chua.yaml  lorenz.yaml  rossler.yaml  sir.yaml  vdp.yaml
baselines/params/: duff.py
envs/: kkl.yml
notebooks/: data_visualization.ipynb  model_test.ipynb  test.ipynb  visualize_dataset.ipynb
runners/: data_generator.ipynb  generate_dataset.py  run.py  train.py
runners/config/: baseline.yaml  data generation.yaml
runners/config/data/exo_input/: duff.yaml  lorenz.yaml  rossler.yaml  sir.yaml  vdp.yaml
runners/config/data/observer/: duff - observer.yaml  lorenz.yaml
runners/config/data/system/: chua.yaml  duff.yaml  lorenz.yaml  rossler.yaml  sir.yaml  vdp.yaml
runners/config/model/: mlp.yaml
runners/config/trainer/: supervised.yaml
src/: dataset.py  duff_param.py  utils.py
src/data/: dataset.py  generation.py  loader.py  simulation.py
src/data_loader/: data_preparation.py  dataset.py
src/loss/: pde_loss.py
src/model/: NN.py  hypernetwork.py  mapper.py  model_generation.py  models.py  modules.py
src/simulators/: estimators.py  exogenous_signals.py  noise.py  sampler.py  solvers.py  system.py  systems.py  tp.py  types.py
src/trainer/: trainer.py
src/utils/: helpers.py  input_checker.py  logger.py  loss.py  lyapunov.py  normalizer.py  pde_loss.py
test/: data_test.py
test/config/: data.yaml
(+8 files in other folders)
