[project]
name = "hyperkkl"
version = "0.1.0"
description = "Research repository for adaptive learning for learnable observers"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    # Add your dependencies here, e.g.,
    # "torch>=1.9.0",
    # "numpy",
    # "scipy",
    # "pyyaml",
    # "matplotlib",
    # "tensorboard",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
keywords = ["adaptive learning", "learnable observers", "research"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
